category small fix